--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -331,6 +331,7 @@ SET( renderbackend_vulkanrenderer_src
 )
 SET( renderbackend_inc
     ${HEADER_PATH}/RenderBackend/BlendState.h
+	${HEADER_PATH}/RenderBackend/CullState.h
     ${HEADER_PATH}/RenderBackend/ClearState.h
     ${HEADER_PATH}/RenderBackend/SamplerState.h
     ${HEADER_PATH}/RenderBackend/StencilState.h
