RenderBackend: Add test and fixes for pipeline.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -55,6 +55,7 @@ SET ( unittest_rb_src
 	src/RenderBackend/CullStateTest.cpp
     src/RenderBackend/BlendStateTeste.cpp
 	src/RenderBackend/RenderCommonTest.cpp
+	src/RenderBackend/PipelineTest.cpp
 )
 
 SET( unittest_ui_src
