--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+
 before_install:
   - yes | sudo add-apt-repository ppa:zoogie/sdl2-snapshots
   - yes | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
@@ -14,6 +16,6 @@ env:
 language: cpp
 compiler:
   - gcc
-#  - clang
+  - clang
 script:
   - . ./.travis.sh
