Unittests: add unitest for abstract processor.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -27,6 +27,7 @@ SET ( unittest_app_src
 )
 
 SET ( unittest_common_src
+	src/Common/AbstractProcessTest.cpp
     src/Common/ArgumentParserTest.cpp
 	src/Common/AbstractServiceTest.cpp
 	src/Common/CommonTest.cpp
