--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -296,7 +296,7 @@ SET( scene_inc
 # RenderBackend
 #==============================================================================
 SET( renderbackend_src
-    RenderBackend/GPUBufferManager.cpp
+    #RenderBackend/GPUBufferManager.cpp
     RenderBackend/FontBase.cpp
     RenderBackend/RenderBackendService.cpp
     RenderBackend/RenderCommon.cpp
@@ -331,9 +331,10 @@ SET( renderbackend_inc
     ${HEADER_PATH}/RenderBackend/BlendState.h
 	${HEADER_PATH}/RenderBackend/CullState.h
     ${HEADER_PATH}/RenderBackend/ClearState.h
-	${HEADER_PATH}/RenderBackend/GPUBufferManager.h
+	#${HEADER_PATH}/RenderBackend/GPUBufferManager.h
     ${HEADER_PATH}/RenderBackend/SamplerState.h
     ${HEADER_PATH}/RenderBackend/StencilState.h
+    ${HEADER_PATH}/RenderBackend/PolygonState.h
     ${HEADER_PATH}/RenderBackend/FontBase.h
     ${HEADER_PATH}/RenderBackend/Parameter.h
     ${HEADER_PATH}/RenderBackend/Pipeline.h
