--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -56,6 +56,7 @@ SET( unittest_platform_src
 SET ( unittest_rb_src
 	src/RenderBackend/CullStateTest.cpp
     src/RenderBackend/BlendStateTeste.cpp
+    src/RenderBackend/PolygonStateTest.cpp
 	src/RenderBackend/RenderCommonTest.cpp
 	src/RenderBackend/PipelineTest.cpp
 )
