--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ install:
 - call c:\projects\osre\scripts\appveyor\compiler_setup.bat
 
 build_script:
-- cd c:\projects\assimp
+- cd c:\projects\osre
 - if "%platform%" equ "x64" (cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
 - if "%platform%" equ "x86" (cmake CMakeLists.txt -G "Visual Studio %Configuration%")
 - if "%platform%" equ "x64" (msbuild /m /p:Configuration=Release /p:Platform="x64" osre.sln)
