--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,7 @@ configuration:
   #- 10 2010 # only works for x86
 
 init:
+- call c:\projects\osre\scripts\appveyor\setup_repo.bat
 - if "%platform%" EQU "x64" ( for %%a in (2008 2010 MinGW) do ( if "%Configuration%"=="%%a" (echo "Skipping unsupported configuration" && exit /b 1 ) ) )
 
 install:
