--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,10 +34,10 @@ before_build:
 
 build_script:
 - cd c:\projects\osre
-- if "%platform%" equ "x64" (set SDL_PATH="c:\projects\osre\SDL2-devel-2.0.5\"; cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
-- if "%platform%" equ "x86" (set SDL_PATH="c:\projects\osre\SDL2-devel-2.0.5\";cmake CMakeLists.txt -G "Visual Studio %Configuration%")
-- if "%platform%" equ "x64" (set SDL_PATH="c:\projects\osre\SDL2-devel-2.0.5\";msbuild /m /p:Configuration=Release /p:Platform="x64" osre.sln)
-- if "%platform%" equ "x86" (set SDL_PATH="c:\projects\osre\SDL2-devel-2.0.5\";msbuild /m /p:Configuration=Release /p:Platform="Win32" osre.sln)
+- if "%platform%" equ "x64" (set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\;cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
+- if "%platform%" equ "x86" (set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\;cmake CMakeLists.txt -G "Visual Studio %Configuration%")
+- if "%platform%" equ "x64" (set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\;msbuild /m /p:Configuration=Release /p:Platform="x64" osre.sln)
+- if "%platform%" equ "x86" (set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\;msbuild /m /p:Configuration=Release /p:Platform="Win32" osre.sln)
 
 after_build:
   - 7z a osre.7z c:\projects\osre\bin\release\* c:\projects\osre\lib\release\*
