--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,6 +34,7 @@ before_build:
 
 build_script:
 - cd c:\projects\osre
+- dir
 - set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\
 - if "%platform%" equ "x64" (cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
 - if "%platform%" equ "x86" (cmake CMakeLists.txt -G "Visual Studio %Configuration%")
