--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ before_build:
 build_script:
 - cd c:\projects\osre
 - dir
-- set SDL_PATH=\projects\osre\SDL2-devel-2.0.5\
+- set SDL_PATH=\projects\osre\SDL2-2.0.5\
 - if "%platform%" equ "x64" (cmake CMakeLists.txt -G "Visual Studio %Configuration% Win64")
 - if "%platform%" equ "x86" (cmake CMakeLists.txt -G "Visual Studio %Configuration%")
 - if "%platform%" equ "x64" (msbuild /m /p:Configuration=Release /p:Platform="x64" osre.sln)
