--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -309,7 +309,7 @@ SET( renderbackend_src
     RenderBackend/RenderCommon.cpp
     RenderBackend/Parameter.cpp
     RenderBackend/Pipeline.cpp
-	RenderBackend/ParticleGenerator.cpp
+    RenderBackend/ParticleGenerator.cpp
 )
 SET( renderbackend_oglrenderer_src
     RenderBackend/OGLRenderer/OGLCommon.h
@@ -337,15 +337,15 @@ SET( renderbackend_vulkanrenderer_src
 )
 SET( renderbackend_inc
     ${HEADER_PATH}/RenderBackend/BlendState.h
-	${HEADER_PATH}/RenderBackend/CullState.h
+    ${HEADER_PATH}/RenderBackend/CullState.h
     ${HEADER_PATH}/RenderBackend/ClearState.h
-	${HEADER_PATH}/RenderBackend/GPUBufferManager.h
+    ${HEADER_PATH}/RenderBackend/GPUBufferManager.h
     ${HEADER_PATH}/RenderBackend/SamplerState.h
     ${HEADER_PATH}/RenderBackend/StencilState.h
     ${HEADER_PATH}/RenderBackend/PolygonState.h
     ${HEADER_PATH}/RenderBackend/FontBase.h
     ${HEADER_PATH}/RenderBackend/Parameter.h
-	${HEADER_PATH}/RenderBackend/ParticleGenerator.h
+    ${HEADER_PATH}/RenderBackend/ParticleGenerator.h
     ${HEADER_PATH}/RenderBackend/Pipeline.h
     ${HEADER_PATH}/RenderBackend/RenderBackendService.h
     ${HEADER_PATH}/RenderBackend/RenderCommon.h
@@ -356,15 +356,16 @@ SET( renderbackend_inc
 #==============================================================================
 SET( ui_src
     UI/FontManager.cpp
-	UI/Image.cpp
+    UI/Image.cpp
     UI/Widget.cpp
-	UI/UiRenderer.cpp
+    UI/UiRenderer.cpp
     UI/UIRenderUtils.cpp
     UI/UIRenderUtils.h
     UI/ButtonBase.cpp
     UI/Panel.cpp
     UI/Screen.cpp
-	UI/TextBase.cpp
+    UI/TextBase.cpp
+    UI/UiItemFactory.cpp
 )
 SET( ui_inc
     ${HEADER_PATH}/UI/FontManager.h
