--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,6 @@ set_target_properties(  cppcore          PROPERTIES FOLDER ThirdParty )
 set_target_properties(  cppcore_unittest PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp           PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp_cmd       PROPERTIES FOLDER ThirdParty )
-set_target_properties(  assimp_viewer    PROPERTIES FOLDER ThirdParty )
-set_target_properties(  unit             PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  assimp_viewer    PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  unit             PROPERTIES FOLDER ThirdParty )
 #set_target_properties(  zlibstatic PROPERTIES FOLDER ThirdParty )
