CMake: remove assimp-tools from the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ endif()
 add_definitions( -DGLM_ENABLE_EXPERIMENTAL )
 
 SET( BUILD_SHARED_LIBS OFF )
+SET( ASSIMP_BUILD_ASSIMP_TOOLS OFF )
 # Include all sub directories of the engine code component
 ADD_SUBDIRECTORY( src/Engine )
 ADD_SUBDIRECTORY( src/Editor )
@@ -115,7 +116,3 @@ ADD_SUBDIRECTORY( 3dparty/assimp/ )
 set_target_properties(  cppcore          PROPERTIES FOLDER ThirdParty )
 set_target_properties(  cppcore_unittest PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp           PROPERTIES FOLDER ThirdParty )
-#set_target_properties(  assimp_cmd       PROPERTIES FOLDER ThirdParty )
-#set_target_properties(  assimp_viewer    PROPERTIES FOLDER ThirdParty )
-#set_target_properties(  unit             PROPERTIES FOLDER ThirdParty )
-#set_target_properties(  zlibstatic PROPERTIES FOLDER ThirdParty )
