Refactoring: move geometry into its own file.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -310,6 +310,7 @@ SET( scene_inc
 # RenderBackend
 #==============================================================================
 SET( renderbackend_src
+    RenderBackend/Geometry.cpp
     RenderBackend/GPUBufferManager.cpp
     RenderBackend/FontBase.cpp
     RenderBackend/RenderBackendService.cpp
@@ -346,6 +347,7 @@ SET( renderbackend_inc
     ${HEADER_PATH}/RenderBackend/BlendState.h
     ${HEADER_PATH}/RenderBackend/CullState.h
     ${HEADER_PATH}/RenderBackend/ClearState.h
+    ${HEADER_PATH}/RenderBackend/Geometry.h
     ${HEADER_PATH}/RenderBackend/GPUBufferManager.h
     ${HEADER_PATH}/RenderBackend/SamplerState.h
     ${HEADER_PATH}/RenderBackend/StencilState.h
