--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 PROJECT( osre )
-SET ( OSRE_VERSION_MAJOR 0 )
-SET ( OSRE_VERSION_MINOR 1 )
-SET ( OSRE_VERSION_PATCH 0 )
-SET ( OSRE_VERSION ${OSRE_VERSION_MAJOR}.${OSRE_VERSION_MINOR}.${OSRE_VERSION_PATCH} )
-SET ( PROJECT_VERSION "${OSRE_VERSION}" )
+set ( OSRE_VERSION_MAJOR 0 )
+set ( OSRE_VERSION_MINOR 1 )
+set ( OSRE_VERSION_PATCH 0 )
+set ( OSRE_VERSION ${OSRE_VERSION_MAJOR}.${OSRE_VERSION_MINOR}.${OSRE_VERSION_PATCH} )
+set ( PROJECT_VERSION "${OSRE_VERSION}" )
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/3dparty/assimp/cmake-modules/")
 message(${CMAKE_MODULE_PATH})
@@ -14,11 +14,11 @@ OPTION( OSRE_BUILD_SAMPLES
 )
 
 # Cache these to allow the user to override them manually.
-SET( LIB_INSTALL_DIR "lib" CACHE PATH
+set( LIB_INSTALL_DIR "lib" CACHE PATH
     "Path the built library files are installed to." )
-SET( INCLUDE_INSTALL_DIR "osre" CACHE PATH
+set( INCLUDE_INSTALL_DIR "osre" CACHE PATH
     "Path the header files are installed to." )
-SET( BIN_INSTALL_DIR "bin" CACHE PATH
+set( BIN_INSTALL_DIR "bin" CACHE PATH
     "Path the tool executables are installed to." )
 
 INCLUDE_DIRECTORIES(
@@ -40,17 +40,17 @@ link_directories(
     ${CMAKE_HOME_DIRECTORY}/bin
 )
 
-SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
-SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
-SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin )
+set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin )
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 if( WIN32 )
     add_definitions( -DWIN32_LEAN_AND_MEAN )
 else()
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC" )
-  SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -fPIC" )
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC" )
+  set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -fPIC" )
   if(CMAKE_BUILD_TYPE STREQUAL "Debug")
       set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib-debug)
       set(LIB_INSTALL_DIR ${CMAKE_SOURCE_DIR}/lib-debug)
@@ -84,9 +84,10 @@ elseif ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
 endif()
 add_definitions( -DGLM_ENABLE_EXPERIMENTAL )
 
-SET( BUILD_SHARED_LIBS OFF )
-SET( ASSIMP_BUILD_ASSIMP_TOOLS OFF )
-SET( ASSIMP_BUILD_TESTS OFF )
+# Configuring assimp
+set( BUILD_SHARED_LIBS OFF )
+set( ASSIMP_BUILD_ASSIMP_TOOLS OFF )
+set( ASSIMP_BUILD_TESTS OFF )
 
 # Include all sub directories of the engine code component
 ADD_SUBDIRECTORY( src/Engine )
