Editor: prepare nativedll wrapper for c#-based editor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set( ASSIMP_BUILD_TESTS OFF )
 
 # Include all sub directories of the engine code component
 ADD_SUBDIRECTORY( src/Engine )
+ADD_SUBDIRECTORY( src/Editor )
 ADD_SUBDIRECTORY( test/RenderTests )
 ADD_SUBDIRECTORY( test/UnitTests )
 IF ( OSRE_BUILD_SAMPLES )
