Editor: add csharp project to filter \n introduce loading via jsoncpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,3 +121,5 @@ ADD_SUBDIRECTORY( 3dparty/jsoncpp-1.8.4 )
 set_target_properties(  cppcore          PROPERTIES FOLDER ThirdParty )
 set_target_properties(  cppcore_unittest PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp           PROPERTIES FOLDER ThirdParty )
+set_target_properties(  OSREEditor       PROPERTIES FOLDER Editor )
+
