RenderBackend: introduce setting of global matrices.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -317,6 +317,7 @@ SET( renderbackend_src
     RenderBackend/Parameter.cpp
     RenderBackend/Pipeline.cpp
     RenderBackend/ParticleGenerator.cpp
+    RenderBackend/HWBufferManager.cpp
 )
 SET( renderbackend_oglrenderer_src
     RenderBackend/OGLRenderer/OGLCommon.h
