Editor: prepare the model.

--- a/src/Editor/OSREEditor/OSREEditor.csproj
+++ b/src/Editor/OSREEditor/OSREEditor.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MainEditorWindow.Designer.cs">
       <DependentUpon>MainEditorWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Project.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\OSREWrapper.cs" />
@@ -81,8 +82,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
