DX11: fix commitframe.

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,62 @@
 *.pdb
 
 # Generated CMake files
+3dparty/assimp/CMakeFiles/
+3dparty/assimp/test/CMakeFiles/
+3dparty/assimp/contrib/irrXML/CMakeFiles/
+.vs/
+3dparty/assimp/Assimp.sln
+3dparty/assimp/DartConfiguration.tcl
+3dparty/assimp/assimp-config-version.cmake
+3dparty/assimp/assimp-config.cmake
+3dparty/assimp/assimp.pc
+3dparty/assimp/cmake_install.cmake
+3dparty/assimp/cmake_uninstall.cmake
+3dparty/assimp/code/cmake_install.cmake
+3dparty/assimp/contrib/CMakeFiles/
+3dparty/assimp/contrib/cmake_install.cmake
+3dparty/assimp/contrib/irrXML/cmake_install.cmake
+3dparty/assimp/contrib/zlib/CMakeFiles/
+3dparty/assimp/contrib/zlib/CTestTestfile.cmake
+3dparty/assimp/contrib/zlib/cmake_install.cmake
+3dparty/assimp/contrib/zlib/zconf.h
+3dparty/assimp/contrib/zlib/zlib.dir/
+3dparty/assimp/contrib/zlib/zlib.pc
+3dparty/assimp/revision.h
+3dparty/assimp/test/CTestTestfile.cmake
+3dparty/assimp/test/cmake_install.cmake
+3dparty/assimp/test/headercheck/CMakeFiles/
+3dparty/assimp/test/headercheck/CTestTestfile.cmake
+3dparty/assimp/test/headercheck/cmake_install.cmake
+3dparty/assimp/tools/assimp_cmd/CMakeFiles/
+3dparty/assimp/tools/assimp_cmd/assimp_cmd.dir/
+3dparty/assimp/tools/assimp_cmd/cmake_install.cmake
+3dparty/assimp/tools/assimp_view/CMakeFiles/
+3dparty/assimp/tools/assimp_view/assimp_viewer.dir/
+3dparty/assimp/tools/assimp_view/cmake_install.cmake
+3dparty/glew/cmake_install.cmake
+3dparty/soil/cmake_install.cmake
+3dparty/unzip/CMakeFiles/
+3dparty/unzip/cmake_install.cmake
+3dparty/zlib/CTestTestfile.cmake
+3dparty/zlib/cmake_install.cmake
+3dparty/zlib/zconf.h
+3dparty/zlib/zlib.pc
+3dparty/zlib/zlib.sln
+CMakeCache.txt
+CMakeFiles/
+Win32/
+bin/
+cmake_install.cmake
+lib/
+osre.sln
+samples/CMakeFiles/
+samples/cmake_install.cmake
+src/Editor/.vs/
+src/Editor/CMakeFiles/
+src/Editor/OSREEditor/obj/
+src/Editor/cmake_install.cmake
+src/Engine/CMakeFiles/
 
 # Project files
 *.user
