--- a/src/Editor/OSREEditor/OSREEditor.csproj
+++ b/src/Editor/OSREEditor/OSREEditor.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Model\WorldProxy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\NewProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\NewProject.Designer.cs">
+      <DependentUpon>NewProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\OSREWrapper.cs" />
     <Compile Include="View\ProjectTreeView.cs" />
     <Compile Include="View\RenderControl.cs" />
@@ -71,6 +77,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\NewProject.resx">
+      <DependentUpon>NewProject.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
