Editor: Introduce Info-dialog.

--- a/src/Editor/OSREEditor/OSREEditor.csproj
+++ b/src/Editor/OSREEditor/OSREEditor.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Model\WorldProxy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\InfoDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\InfoDialog.Designer.cs">
+      <DependentUpon>InfoDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\NewProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\InfoDialog.resx">
+      <DependentUpon>InfoDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\NewProject.resx">
       <DependentUpon>NewProject.cs</DependentUpon>
     </EmbeddedResource>
