Editor: introduce load- and save-actions and connect them.

--- a/src/Editor/OSREEditor/OSREEditor.csproj
+++ b/src/Editor/OSREEditor/OSREEditor.csproj
@@ -53,7 +53,9 @@
       <DependentUpon>MainEditorWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Actions\IAction.cs" />
+    <Compile Include="Model\Actions\LoadProjectAction.cs" />
     <Compile Include="Model\Actions\NewProjectAction.cs" />
+    <Compile Include="Model\Actions\SaveProjectAction.cs" />
     <Compile Include="Model\MarshallingHelper.cs" />
     <Compile Include="Model\Project.cs" />
     <Compile Include="Model\WorldProxy.cs" />
