Editor: prepare the save.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -28,6 +28,7 @@ SET ( unittest_assets_src
 	src/Assets/AssetRegistryTest.cpp
 	src/Assets/AssetDataTest.cpp
     src/Assets/AssetWrapperTest.cpp
+    src/Assets/AssetDataArchiveTest.cpp
 )
 
 SET ( unittest_app_src
